--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       content="front-end web developer, unblocked, games, google sites, unblocked games mom, ublocked, code, coding, programmer, development, javascript, jquery, bootstrap, sass, less, git, gaming, internet, website, best, site, cool, free games"
     />
 
+       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7835554576835583"
+     crossorigin="anonymous"></script>
+
   </head>
   <alerts>
     <sl-dialog label="Welcome to Selenite!" class="dialog-width" style="--width: 60vw;display:none;">
